# tarmath

./: LICENSE  README.md  pyproject.toml
src/tarmath/: main.py
