[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarmath"
version = "0.0.1"
authors = [
  { name="Tarsow", email="tarsowdev@gmail.com" },
]
description = "A math package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tarsow/tarmath"
Issues = "https://github.com/tarsow/tarmath/issues"

[tool.hatch.build.targets.sdist]
include = [
  "src/tarmath/*.py",
  "/tests",
]
exclude = [
  "*.json",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tarmath"]
